--- a/images/index.html
+++ b/images/index.html
@@ -25,7 +25,9 @@
   
 
   <p class="details">Clipboard allows you to track and organize everything you copy. Instantly access your clipboard on all your devices.</p>
-<div>
+
+
+<div id="download">
   <button class="ios-button">Download for iOS</button>
   <button class="mac-button">Download for Mac</button>
 </div>
