--- a/index.html
+++ b/index.html
@@ -1,16 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <!-- displays site properly based on user's device -->
 
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
   <link rel="stylesheet" href="style.css">
   <link rel="stylesheet" href="style2.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Bai+Jamjuree:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;1,200;1,300;1,400;1,500;1,600;1,700&display=swap" rel="stylesheet">
-  
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link
+    href="https://fonts.googleapis.com/css2?family=Bai+Jamjuree:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;1,200;1,300;1,400;1,500;1,600;1,700&display=swap"
+    rel="stylesheet">
+
   <title>Frontend Mentor | Clipboard landing page</title>
 
   <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
@@ -19,146 +23,149 @@
     .attribution a { color: hsl(228, 45%, 44%); }
   </style> -->
 </head>
+
 <body>
-<header>
-  <img src="images/logo.svg" alt="">
-  
-</header>
+  <header>
+    <img src="images/logo.svg" alt="">
 
-<div class="history">
-  <h1>A history of everything you copy</h1>
-  
+  </header>
 
-  <p class="details">Clipboard allows you to track and organize everything you copy. Instantly access your clipboard on all your devices.</p>
-<div class="download">
-  <button class="ios-button">Download for iOS</button>
-  <button class="mac-button">Download for Mac</button>
-</div>
-</div>
+  <div class="history">
+    <h1>A history of everything you copy</h1>
 
-  
-<div class="keep-track">
 
-  <h2>Keep track of your snippets</h2>
+    <p class="details">Clipboard allows you to track and organize everything you copy. Instantly access your clipboard
+      on all your devices.</p>
+    <div class="download">
+      <button class="ios-button">Download for iOS</button>
+      <button class="mac-button">Download for Mac</button>
+    </div>
+  </div>
 
-  <p>Clipboard instantly stores any item you copy in the cloud, meaning you can access your snippets immediately on all your devices. Our Mac and iOS apps will help you organize everything.</p>
- 
-</div>
 
-<div class="computer-div">
+  <div class="keep-track">
 
-  <img src="images/image-computer.png" alt="" class="computer">
+    <h2>Keep track of your snippets</h2>
 
-  <div class="quick">
+    <p>Clipboard instantly stores any item you copy in the cloud, meaning you can access your snippets immediately on
+      all your devices. Our Mac and iOS apps will help you organize everything.</p>
 
-    <div>
-      <h3>Quick Search</h3>
+  </div>
 
-      <p>Easily search your snippets by content, category, web address, application, and more.</p>
+  <div class="computer-div">
+
+    <img src="images/image-computer.png" alt="" class="computer">
+
+    <div class="quick">
+
+      <div>
+        <h3>Quick Search</h3>
+
+        <p>Easily search your snippets by content, category, web address, application, and more.</p>
+      </div>
+
+      <div>
+        <h3>iCloud Sync</h3>
+
+        <p>Instantly saves and syncs snippets across all your devices.</p>
+      </div>
+
+      <div>
+        <h3>Complete History</h3>
+
+        <p>
+          Retrieve any snippets from the first moment you started using the app.
+        </p>
+      </div>
+
     </div>
 
-    <div>
-      <h3>iCloud Sync</h3>
-  
-      <p>Instantly saves and syncs snippets across all your devices.</p>
-    </div>
+  </div>
+
+
+  <div class="access">
+    <h2>Access Clipboard anywhere</h2>
+
+    <p>Whether you're on the go, or at your computer, you can access all your Clipboard
+      snippets in a few simple clicks.</p>
+  </div>
+
+  <div>
+    <img src="images/image-devices.png" alt="">
+  </div>
+
+
+  <div class="supercharge">
+    <h2>Supercharge your workflow</h2>
+
+    <p>We've got the tools to boost your productivity.</p>
+  </div>
+
+  <div class="create-plain-sneak">
 
     <div>
-      <h3>Complete History</h3>
-  
+      <img src="images/icon-blacklist.svg" alt="">
+      <h3>Create blacklists</h3>
       <p>
-        Retrieve any snippets from the first moment you started using the app.
+        Ensure sensitive information never makes its way to your clipboard by excluding certain sources.
       </p>
     </div>
 
-  </div>
 
-</div>
+    <div>
+      <img src="images/icon-text.svg" alt="">
+      <h3>Plain text snippets</h3>
+      <p>
+        Remove unwanted formatting from copied text for a consistent look.
+      </p>
+    </div>
 
-
-<div class="access">
-  <h2>Access Clipboard anywhere</h2>
-
-  <p>Whether you're on the go, or at your computer, you can access all your Clipboard 
-   snippets in a few simple clicks.</p>
-</div>
-
-<div>
-  <img src="images/image-devices.png" alt="">
-</div>
-
-  
-<div class="supercharge">
-  <h2>Supercharge your workflow</h2>
-
-  <p>We've got the tools to boost your productivity.</p>
-</div>
-
-<div class="create-plain-sneak">
-
-  <div>
-    <img src="images/icon-blacklist.svg" alt="">
-    <h3>Create blacklists</h3>
-    <p>
-      Ensure sensitive information never makes its way to your clipboard by excluding certain sources.
-    </p>
+    <div>
+      <img src="images/icon-preview.svg" alt="">
+      <h3>Sneak preview</h3>
+      <p>
+        Quick preview of all snippets on your Clipboard for easy access.
+      </p>
+    </div>
   </div>
 
 
-<div>
-  <img src="images/icon-text.svg" alt="">
-  <h3>Plain text snippets</h3>
-  <p>
-    Remove unwanted formatting from copied text for a consistent look.
-  </p>
-</div>
+  <div class="logos">
+    <div>
+      <img src="images/logo-google.png" alt="">
+    </div>
 
-<div>
-  <img src="images/icon-preview.svg" alt="">
-  <h3>Sneak preview</h3>
-  <p>
-    Quick preview of all snippets on your Clipboard for easy access.
-  </p>
-</div>
-</div>
+    <div>
+      <img src="images/logo-ibm.png" alt="">
+    </div>
 
+    <div>
+      <img src="images/logo-microsoft.png" alt="">
+    </div>
 
-<div class="logos">
-  <div>
-    <img src="images/logo-google.png" alt="">
+    <div>
+      <img src="images/logo-hp.png" alt="">
+    </div>
+
+    <div>
+      <img src="images/logo-vector-graphics.png" alt="">
+    </div>
+
   </div>
 
-  <div>
-    <img src="images/logo-ibm.png" alt="">
-  </div>
 
-  <div>
-    <img src="images/logo-microsoft.png" alt="">
-  </div>
 
-  <div>
-    <img src="images/logo-hp.png" alt="">
-  </div>
-  
-  <div>
-    <img src="images/logo-vector-graphics.png" alt="">
-  </div> 
-  
-</div>
-  
 
-  
 
- 
 
-  
 
-  
+
+
 
   <div class="clipboard">
     <h2>Clipboard for iOS and Mac OS</h2>
     <p>
-      Available for free on the App Store. Download for Mac or iOS, sync with iCloud 
+      Available for free on the App Store. Download for Mac or iOS, sync with iCloud
       and you're ready to start adding to your clipboard.
     </p>
 
@@ -170,25 +177,36 @@
   </div>
 
 
-<footer>
-  <div style="width: 50px;">
-    <img src="images/logo.svg" alt="">
-  </div>
+  <footer>
+    <div style="width: 50px;">
+      <img src="images/logo.svg" alt="">
+    </div>
 
-  <div class="contact">
-    <div><p>FAQs</p></div>
-    <div><p>Contact Us</p></div>
-    <div><p>Privacy Policy</p></div>
-    <div><p>Press Kit</p></div>
-    <div><p>Install Guide</p></div>
-  </div>
+    <div class="contact">
+      <div>
+        <a href=""><p>FAQs</p></a>
+      </div>
+      <div>
+        <a href=""><p>Contact Us</p></a>
+      </div>
+      <div>
+        <a href=""><p>Privacy Policy</p></a>
+      </div>
+      <div>
+        <a href=""><p>Press Kit</p></a>
+      </div>
+      <div>
+        <a href=""><p>Install Guide</p></a>
+      </div>
+    </div>
 
-  <div class="socials">
-    <div><img src="images/icon-facebook.svg" alt=""></div>
-    <div><img src="images/icon-twitter.svg" alt=""></div>
-    <div><img src="images/icon-instagram.svg" alt=""></div>
-  </div>
-  
-</footer>
+    <div class="socials">
+      <div><img src="images/icon-facebook.svg" alt=""></div>
+      <div><img src="images/icon-twitter.svg" alt=""></div>
+      <div><img src="images/icon-instagram.svg" alt=""></div>
+    </div>
+
+  </footer>
 </body>
+
 </html>
