--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     href="https://fonts.googleapis.com/css2?family=Bai+Jamjuree:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;1,200;1,300;1,400;1,500;1,600;1,700&display=swap"
     rel="stylesheet">
 
-  <title>Frontend Mentor | Clipboard landing page</title>
+  <title>Clipboard</title>
 
   <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
   <!-- <style>
@@ -207,6 +207,21 @@
     </div>
 
   </footer>
+
+  <script>
+    console.log('2==2');
+
+    var drink = 'fanta'
+
+    if (drink == 'sprite') {
+      console.log('buy 4 bottles');
+    } else if (drink == 'coke') {
+      console.log('buy 3 bottles');
+    } else {
+      console.log('start coming back home');
+    }
+  </script>
 </body>
+
 
 </html>
